# TrainingMachine

./: CMakeLists.txt  ExecutionContext.h  IStreamInterpreter.h  Instruction.cpp  Instruction.h  InstructionCellHandler.cpp  InstructionCellHandler.h  InstructionCompleter.cpp  InstructionCompleter.h  InstructionInterpreter.cpp  InstructionInterpreter.h  InstructionTable.cpp  InstructionTable.h  InstructionTableView.cpp  InstructionTableView.h  LICENSE.txt  MainWindow.cpp  MainWindow.h  Memory.cpp  Memory.h  README.md  StreamInterpreter.cpp  StreamInterpreter.h  Utils.cpp  Utils.h  resources.qrc
Instructions/: AddInstruction.cpp  AddInstruction.h  ArithmeticInstruction.h  AssignmentInstruction.cpp  AssignmentInstruction.h  BranchInstruction.cpp  BranchInstruction.h  DivideInstruction.cpp  DivideInstruction.h  IInstruction.h  InputInstruction.cpp  InputInstruction.h  InstructionFactory.h  JumpInstruction.cpp  JumpInstruction.h  ModuloInstruction.cpp  ModuloInstruction.h  MultiplyInstruction.cpp  MultiplyInstruction.h  OutputInstruction.cpp  OutputInstruction.h  StopInstruction.h  SubtractInstruction.cpp  SubtractInstruction.h
